<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/txtOrderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/txtOrderTitle"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtProductsInCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOrderTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btnDeliveryTime"
        android:text="@string/txtContinue" />

    <Button
        android:id="@+id/btnDeliveryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnConfirm"
        android:layout_alignBottom="@+id/btnConfirm"
        android:layout_toRightOf="@+id/btnConfirm"
        android:text="@string/txtDeliveryTime" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:text="@string/txtConfirm" />

</RelativeLayout>
