<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grocery_guy"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCart"
        android:layout_alignBottom="@+id/btnCart"
        android:layout_alignParentLeft="true"
        android:text="@string/txtOrder" />

    <Button
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnBrowse"
        android:text="@string/txtCart" />

    <Button
        android:id="@+id/btnBrowse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnOrders"
        android:text="@string/txtBrowse" />

</RelativeLayout>
